--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,5 @@ target_link_libraries(swdnnlib
   /home/export/online1/swyf/swdnn/fjr/2018-09/BLAS/swGEMM/build/libswBLASlib.a)
 target_link_libraries(swdnnlib /home/export/online1/swyf/swdnn/fjr/2018-09/BLAS/swGEMM/thirdparty/lib/cblas_LINUX0324.a)
 target_link_libraries(swdnnlib /home/export/online1/swyf/swdnn/fjr/2018-09/BLAS/swGEMM/thirdparty/lib/libswblas0324.a)
-#add_executable(sam
+#add_executable(samplesort test/samplesort.cpp)
+enable_testing()
